<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        local:layout_constraintEnd_toEndOf="parent"
        local:layout_constraintStart_toStartOf="parent"
        local:layout_constraintTop_toTopOf="parent"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="0dp"
                android:singleLine="true"
                android:text="@string/forgot_password_textview"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        local:layout_constraintEnd_toEndOf="parent"
        local:layout_constraintHorizontal_bias="0.5"
        local:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:scaleType="center"
                android:src="@drawable/iv_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forgotPasswordResponse_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="30dp"
                android:padding="5dp"
                android:text="A recovery link will be sent to your email"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                local:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_forgot_password_family_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red"
                android:textSize="20sp"
                local:layout_constraintEnd_toEndOf="@id/forgotPasswordResponse_tv"
                local:layout_constraintStart_toStartOf="@id/forgotPasswordResponse_tv"
                local:layout_constraintTop_toBottomOf="@id/forgotPasswordResponse_tv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:elevation="20dp"
                android:focusedByDefault="false"
                android:hint="Email"
                app:endIconMode="clear_text"
                app:helperTextTextColor="#ED4639"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:startIconDrawable="@drawable/reg_email_icon"
                app:startIconTint="#ED4639"
                local:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_family_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvEmailText_forgotpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_fgtPassword_already_have_acct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="52dp"
                android:text="Already have account?"
                android:textSize="18sp"
                local:layout_constraintEnd_toStartOf="@+id/tv_forgot_password_Login_text"
                local:layout_constraintHorizontal_bias="0.5"
                local:layout_constraintHorizontal_chainStyle="packed"
                local:layout_constraintStart_toStartOf="parent"
                local:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <TextView
                android:id="@+id/tv_forgot_password_Login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:autoLink="all"
                android:clickable="true"
                android:focusable="true"
                android:padding="0dp"
                android:text="@string/forgot_password_login"
                android:textColor="#2347F2"
                android:textSize="18sp"
                local:layout_constraintEnd_toStartOf="@+id/textView2"
                local:layout_constraintHorizontal_bias="0.5"
                local:layout_constraintStart_toEndOf="@+id/tv_fgtPassword_already_have_acct"
                local:layout_constraintTop_toTopOf="@id/tv_fgtPassword_already_have_acct" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="here."
                android:textSize="18sp"
                local:layout_constraintBottom_toBottomOf="@id/tv_forgot_password_Login_text"
                local:layout_constraintEnd_toEndOf="parent"
                local:layout_constraintHorizontal_bias="0.5"
                local:layout_constraintStart_toEndOf="@+id/tv_forgot_password_Login_text"
                local:layout_constraintTop_toTopOf="@id/tv_forgot_password_Login_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/registration_custom_button"
                android:gravity="center"
                android:text="Forgot Password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fgtPassword_already_have_acct"
                app:layout_constraintVertical_bias="0.0"
                local:layout_constraintHorizontal_bias="0.495" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>