...

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/hotel_desc_viewPager"
                android:layout_width="match_parent"
                android:layout_height="250dp"
...

            <View
                android:id="@+id/hotel_desc_gallery_view"
                android:layout_width="120dp"
                android:layout_height="50dp"
...

            <TextView
                android:id="@+id/hotel_desc_hotelName_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/hotel_desc_location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/hotel_desc_showInMap_link_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/hotel_desc_expandable_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/hotel_desc_amenities_wifi_ib"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
...
                    android:src="@drawable/ic_wifi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/hotel_desc_amenities_breakfast_ib"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
...
                    android:src="@drawable/ic__breakfast"
                    app:layout_constraintBottom_toBottomOf="@+id/hotel_desc_amenities_wifi_ib"
                    app:layout_constraintEnd_toStartOf="@+id/hotel_desc_amenities_pet_ib"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/hotel_desc_amenities_wifi_ib"
...
                    android:src="@drawable/ic__pet"
                    app:layout_constraintBottom_toBottomOf="@+id/hotel_desc_amenities_breakfast_ib"
                    app:layout_constraintEnd_toStartOf="@+id/hotel_desc_amenities_bar_ib"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/hotel_desc_amenities_breakfast_ib"
...
                    android:src="@drawable/ic__glass_whine"
                    app:layout_constraintBottom_toBottomOf="@+id/hotel_desc_amenities_pet_ib"
                    app:layout_constraintEnd_toStartOf="@+id/hotel_desc_amenities_pool_ib"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/hotel_desc_amenities_pet_ib"
...
                    android:src="@drawable/ic__pool"
                    app:layout_constraintBottom_toBottomOf="@+id/hotel_desc_amenities_bar_ib"
                    app:layout_constraintEnd_toStartOf="@+id/hotel_desc_amenities_more_ib"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/hotel_desc_amenities_bar_ib"
...

            <TextView
                android:id="@+id/hotel_desc_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:background="@color/white"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toStartOf="@id/hotel_desc_phone_tv"
                app:layout_constraintTop_toTopOf="@id/hotel_desc_mail_icon"
                app:layout_constraintBottom_toBottomOf="@id/hotel_desc_mail_icon"/>
...

            <TextView
                android:id="@+id/hotel_desc_ratings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:layout_constraintTop_toBottomOf="@id/hotel_desc_email_tv"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/hotel_desc_overlapRv"
                app:layout_constraintStart_toStartOf="@id/hotel_desc_overlapRv" />

...

            <RatingBar
                android:id="@+id/hotel_desc_ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hotel_desc_services_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
