...
                app:layout_constraintBottom_toBottomOf="@id/hotel_desc_priceTv"
                app:layout_constraintTop_toBottomOf="@id/hotel_desc_roomTitle_tv"
                app:layout_constraintStart_toEndOf="@id/hotel_desc_priceTv"
                android:layout_marginStart="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/hotel_desc_book_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="Book Now"
                android:textAllCaps="false"
                android:textColor="@color/c_red"
                android:background="@drawable/outline_button_radius"
...
